--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/craterdog-bali/js-bali-digital-notary#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "grunt": "^1.0.2",
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
@@ -29,8 +29,6 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "ec-pem": "^0.18.0",
-    "node-forge": "^0.7.5",
-    "signal-protocol": "^0.1.3"
+    "ec-pem": "^0.18.0"
   }
 }
