Updated dependencies to depend on renamed bali-document-framework.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bali-digital-notary",
   "version": "1.0.0",
-  "description": "This library provides JavaScript based digital notary capability for the Bali Cloud OS™.",
+  "description": "This library provides JavaScript based digital notary capability for the Bali Cloud Environment™.",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/craterdog-bali/js-bali-digital-notary.git"
@@ -28,7 +28,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "bali-document-notation": "file:../js-bali-document-notation",
+    "bali-document-framework": "file:../js-bali-document-framework",
     "ec-pem": "^0.18.0"
   }
 }
