--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "bali-document-framework": "^1.0.0",
+    "bali-component-framework": "file:../js-bali-component-framework",
     "ec-pem": "^0.18.0"
   }
 }
