--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This library provides JavaScript based digital notary capability for the Bali Cloud Environment™.",
   "repository": {
     "type": "git",
@@ -8,7 +8,9 @@
   },
   "keywords": [
     "JavaScript",
-    "Bali",
+    "NodeJS",
+    "Bali Cloud Environment",
+    "Public Key Cryptography",
     "Digital Notary"
   ],
   "author": "Derk Norton",
@@ -28,7 +30,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "bali-component-framework": "^1.0.1",
+    "bali-component-framework": "^1.0.2",
     "ec-pem": "^0.18.0"
   }
 }
