--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bali-digital-notary",
-  "version": "1.1.3",
-  "description": "This library provides JavaScript based digital notary capability for the Bali Cloud Environment™.",
+  "version": "1.2.0",
+  "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/craterdog-bali/js-bali-digital-notary.git"
@@ -9,7 +9,7 @@
   "keywords": [
     "JavaScript",
     "NodeJS",
-    "Bali Cloud Environment",
+    "Bali Nebula",
     "Bali Component Framework",
     "Bali Document Notation",
     "Public Key Cryptography",
@@ -22,17 +22,17 @@
   },
   "homepage": "https://github.com/craterdog-bali/js-bali-digital-notary#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.4.0",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-mocha-test": "^0.13.3",
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "bali-component-framework": "^1.4.0",
+    "bali-component-framework": "^1.4.1",
     "ec-pem": "^0.18.0"
   }
 }
