--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
@@ -23,16 +23,16 @@
   "homepage": "https://github.com/craterdog-bali/js-bali-digital-notary#readme",
   "devDependencies": {
     "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^2.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
     "grunt-mocha-test": "^0.13.3",
-    "mocha": "^5.2.0"
+    "grunt-webpack": "^3.1.3",
+    "webpack": "^4.28.2"
   },
   "dependencies": {
-    "bali-component-framework": "^1.4.14",
+    "bali-component-framework": "^1.5.0",
     "ec-pem": "^0.18.0"
   }
 }
