--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "homepage": "https://github.com/craterdog-bali/js-bali-digital-notary#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-eslint": "^21.0.0",
     "grunt-mocha-test": "^0.13.3",
     "grunt-webpack": "^3.1.3",
+    "mocha": "^5.2.0",
     "webpack": "^4.28.2"
   },
   "dependencies": {
