--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
@@ -34,6 +34,6 @@
   "dependencies": {
     "@abandonware/noble": "^1.9.2-3",
     "bali-component-framework": "^1.11.3",
-    "tweetnacl": "^1.0.1"
+    "supercop.js": "^2.0.1"
   }
 }
