--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "1.8.8",
+  "version": "1.8.9",
   "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@abandonware/noble": "^1.9.2-3",
-    "bali-component-framework": "^1.11.3",
-    "supercop.js": "^2.0.1"
+    "supercop.js": "^2.0.1",
+    "bali-component-framework": "^1.12.0"
   }
 }
