--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
   },
   "dependencies": {
     "supercop.js": "^2.0.1",
-    "bali-component-framework": "^1.15.1"
+    "bali-component-framework": "file:../js-bali-component-framework"
   }
 }
