--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "1.12.3",
+  "version": "2.0.0",
   "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
@@ -13,7 +13,9 @@
     "Bali Component Framework",
     "Bali Document Notation",
     "Public Key Cryptography",
-    "Digital Notary"
+    "Digital Notary",
+    "Notary Certificate",
+    "Notary Seal"
   ],
   "author": "Derk Norton",
   "license": "MIT",
@@ -33,6 +35,6 @@
   },
   "dependencies": {
     "supercop.js": "^2.0.1",
-    "bali-component-framework": "^2.0.1"
+    "bali-component-framework": "^2.1.0"
   }
 }
