--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "2.14.0",
+  "version": "2.15.0",
   "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "webpack": "^5.41.0"
   },
   "dependencies": {
-    "supercop.js": "^2.0.1",
-    "bali-component-framework": "^2.24.2"
+    "supercop": "^2.2.2",
+    "bali-component-framework": "^2.26.0"
   }
 }
