--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-digital-notary",
-  "version": "2.55.0",
+  "version": "2.56.0",
   "description": "This library provides a JavaScript based implementation of digital notary capabilities for the Bali Nebula™.",
   "repository": {
     "type": "git",
@@ -24,17 +24,17 @@
   },
   "homepage": "https://github.com/craterdog-bali/js-bali-digital-notary#readme",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "grunt": "^1.4.1",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-eslint": "^23.0.0",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "webpack": "^5.72.1",
+    "grunt": "^1.5.3",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-eslint": "^24.0.0",
     "grunt-mocha-test": "^0.13.3",
-    "grunt-webpack": "^4.0.3",
-    "mocha": "^9.0.1",
-    "webpack": "^5.41.0"
+    "grunt-webpack": "^5.0.0"
   },
   "dependencies": {
     "supercop": "^2.2.5",
-    "bali-component-framework": "^2.85.0"
+    "bali-component-framework": "^2.86.0"
   }
 }
